--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@mui/material": "^5.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -23,7 +24,7 @@
     "pg": "^8.14.1",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-circular-progressbar": "^2.0.4",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
